--- a/apps/docs/app/(docs)/components/alert/page.mdx
+++ b/apps/docs/app/(docs)/components/alert/page.mdx
@@ -19,9 +19,9 @@ Use the `intent` prop to select between the different alert types.
 
 <Demo component={demos["alert/appearance-usage"]} />
 
-### Close button
+### Dismissible
 
-Use the `onClose` prop to show a close button to the top right of the alert.
+Use the `onDismiss` prop to show a close button to the top right of the alert.
 
 <Demo component={demos["alert/close-usage"]} />
 
@@ -36,6 +36,10 @@ Use the `onClose` prop to show a close button to the top right of the alert.
 <PropsTable component={components["Alert"]} />
 
 ## Changelog
+
+### 0.12.0
+
+- **Breaking:** renamed `onClose` prop to `onDismiss`
 
 ### 0.1.0
 
