--- a/apps/docs/app/(docs)/components/banner/page.mdx
+++ b/apps/docs/app/(docs)/components/banner/page.mdx
@@ -18,9 +18,9 @@ Use the `intent` prop to select between the different banner types.
 
 <Demo component={demos["banner/appearance-usage"]} />
 
-### Close button
+### Dismissible
 
-Use the `onClose` prop to show a close button to the top right of the banner.
+Use the `onDismiss` prop to show a close button to the top right of the banner.
 
 <Demo component={demos["banner/close-usage"]} />
 
@@ -35,6 +35,10 @@ Use the `onClose` prop to show a close button to the top right of the banner.
 <PropsTable component={components["Banner"]} />
 
 ## Changelog
+
+### 0.12.0
+
+- **Breaking:** renamed `onClose` prop to `onDismiss`
 
 ### 0.1.0
 
