--- a/apps/docs/app/(docs)/guides/css-layers/page.mdx
+++ b/apps/docs/app/(docs)/guides/css-layers/page.mdx
@@ -36,6 +36,17 @@ Place your global style rules inside the `optiaxiom.base` layer to ensure they a
 
 Place your Tailwind base directive inside the `optiaxiom.base` layer to prevent conflicts with styles coming from Axiom.
 
+#### Tailwind CSS 4.0
+
+```css {3}
+@layer theme, components, utilities;
+@import "tailwindcss/theme.css" layer(theme);
+@import "tailwindcss/preflight.css" layer(optiaxiom.base);
+@import "tailwindcss/utilities.css" layer(utilities);
+```
+
+#### Tailwind CSS 3.0
+
 ```css {1-3}
 @layer optiaxiom.base {
   @tailwind base;
