refactor Scale component
- show actual theme variable/css custom property when possible (with comment of
  token/resolved value)
- remove pixels and previews columns
- colorize styles to feel like css output

--- a/apps/docs/app/(docs)/styling/background-color/page.mdx
+++ b/apps/docs/app/(docs)/styling/background-color/page.mdx
@@ -5,7 +5,7 @@ import { Scale } from "@/components/scale";
 
 Use `bg` prop to control the background color of an element.
 
-<Scale hidePixels hidePreview values="bg" />
+<Scale themeKey="colors" values="bg" />
 
 ## Documentation
 
