--- a/apps/docs/app/(docs)/styling/border-color/page.mdx
+++ b/apps/docs/app/(docs)/styling/border-color/page.mdx
@@ -5,7 +5,7 @@ import { Scale } from "@/components/scale";
 
 Use `borderColor` prop to control the border color of an element.
 
-<Scale hidePixels hidePreview values="borderColor" />
+<Scale themeKey="colors" values="borderColor" />
 
 ## Documentation
 
