--- a/apps/docs/app/(docs)/styling/border-radius/page.mdx
+++ b/apps/docs/app/(docs)/styling/border-radius/page.mdx
@@ -6,7 +6,7 @@ import { Demo, demos } from "@/components/demo";
 
 Use `rounded` prop to control the border radius of an element.
 
-<Scale values="rounded" />
+<Scale themeKey="borderRadius" values="rounded" />
 
 ## Documentation
 
