--- a/apps/docs/app/(docs)/styling/border-width/page.mdx
+++ b/apps/docs/app/(docs)/styling/border-width/page.mdx
@@ -6,7 +6,7 @@ import { Demo, demos } from "@/components/demo";
 
 Use `border` prop to control the border width of an element.
 
-<Scale hidePixels values="borderT" />
+<Scale values="border" />
 
 ## Documentation
 
