--- a/apps/docs/app/(docs)/styling/box-shadow/page.mdx
+++ b/apps/docs/app/(docs)/styling/box-shadow/page.mdx
@@ -6,7 +6,7 @@ import { Demo, demos } from "@/components/demo";
 
 Use `shadow` prop to control the box shadow of an element.
 
-<Scale hidePixels hidePreview values="shadow" />
+<Scale themeKey="boxShadow" values="shadow" />
 
 ## Documentation
 
