--- a/apps/docs/app/(docs)/styling/design-tokens/page.mdx
+++ b/apps/docs/app/(docs)/styling/design-tokens/page.mdx
@@ -72,72 +72,32 @@ You can use this `theme` object when implementing any CSS-in-JS solutions.
 
 ### `borderRadius`
 
-<Scale
-  hidePreview
-  pixelLabel="Theme"
-  pixelTemplate="theme.borderRadius.{name}"
-  values={theme.borderRadius}
-/>
+<Scale themeKey="borderRadius" values={theme.borderRadius} />
 
 ### `boxShadow`
 
-<Scale
-  hidePreview
-  pixelLabel="Theme"
-  pixelTemplate="theme.boxShadow.{name}"
-  values={theme.boxShadow}
-/>
+<Scale themeKey="boxShadow" values={theme.boxShadow} />
 
 ### `colors`
 
-<Scale
-  hidePreview
-  pixelLabel="Theme"
-  pixelTemplate='theme.colors["{name}"]'
-  values={theme.colors}
-/>
+<Scale themeKey="colors" values={theme.colors} />
 
 ### `fontFamily`
 
-<Scale
-  hidePreview
-  pixelLabel="Theme"
-  pixelTemplate="theme.fontFamily.{name}"
-  values={theme.fontFamily}
-/>
+<Scale themeKey="fontFamily" values={theme.fontFamily} />
 
 ### `fontSize`
 
-<Scale
-  hidePreview
-  pixelLabel="Theme"
-  pixelTemplate='theme.fontSize["{name}"].{key}'
-  values={theme.fontSize}
-/>
+<Scale themeKey="fontSize" values={theme.fontSize} />
 
 ### `maxSize`
 
-<Scale
-  hidePreview
-  pixelLabel="Theme"
-  pixelTemplate="theme.maxSize.{name}"
-  values={theme.maxSize}
-/>
+<Scale themeKey="maxSize" values={theme.maxSize} />
 
 ### `size`
 
-<Scale
-  hidePreview
-  pixelLabel="Theme"
-  pixelTemplate='theme.fontSize["{name}"]'
-  values={theme.size}
-/>
+<Scale themeKey="size" values={theme.size} />
 
 ### `zIndex`
 
-<Scale
-  hidePreview
-  pixelLabel="Theme"
-  pixelTemplate="theme.zIndex.{name}"
-  values={theme.zIndex}
-/>
+<Scale themeKey="zIndex" values={theme.zIndex} />
