--- a/apps/docs/app/(docs)/styling/font-family/page.mdx
+++ b/apps/docs/app/(docs)/styling/font-family/page.mdx
@@ -6,7 +6,7 @@ import { Demo, demos } from "@/components/demo";
 
 Use `fontFamily` prop to control the font-family of an element.
 
-<Scale hidePixels hidePreview values="fontFamily" />
+<Scale themeKey="fontFamily" values="fontFamily" />
 
 ## Documentation
 
