--- a/apps/docs/app/(docs)/styling/font-size/page.mdx
+++ b/apps/docs/app/(docs)/styling/font-size/page.mdx
@@ -5,7 +5,7 @@ import { Demo, demos } from "@/components/demo";
 
 Use `fontSize` prop to control the font-size of an element.
 
-<Scale hidePreview values="fontSize" />
+<Scale themeKey="fontSize" values="fontSize" />
 
 ## Documentation
 
