--- a/apps/docs/app/(docs)/styling/max-height/page.mdx
+++ b/apps/docs/app/(docs)/styling/max-height/page.mdx
@@ -5,7 +5,7 @@ import { Demo, demos } from "@/components/demo";
 
 Use `maxH` prop to control the max-height of an element.
 
-<Scale hidePreview values="maxH" />
+<Scale themeKey="maxSize" values="maxH" />
 
 ## Documentation
 
