--- a/apps/docs/app/(docs)/styling/max-width/page.mdx
+++ b/apps/docs/app/(docs)/styling/max-width/page.mdx
@@ -5,7 +5,7 @@ import { Demo, demos } from "@/components/demo";
 
 Use `maxW` prop to control the max-width of an element.
 
-<Scale hidePreview values="maxW" />
+<Scale themeKey="maxSize" values="maxW" />
 
 ## Documentation
 
