--- a/apps/docs/app/(docs)/styling/responsive-styles/page.mdx
+++ b/apps/docs/app/(docs)/styling/responsive-styles/page.mdx
@@ -7,9 +7,8 @@ import { Demo, demos } from "@/components/demo";
 `Box` component support responsive styles for all layout related props.
 
 <Scale
-  hidePreview
-  keyLabel="Breakpoint"
   valueLabel="Minimum width"
+  themeKey="screens"
   values={{ base: "0px", ...tokens.screens }}
 />
 
