--- a/apps/docs/app/(docs)/styling/size/page.mdx
+++ b/apps/docs/app/(docs)/styling/size/page.mdx
@@ -5,7 +5,7 @@ import { Demo, demos } from "@/components/demo";
 
 Use `size` prop to control both the width and height of an element.
 
-<Scale values="w" />
+<Scale themeKey="size" values="size" />
 
 ## Documentation
 
