--- a/apps/docs/app/(docs)/styling/text-color/page.mdx
+++ b/apps/docs/app/(docs)/styling/text-color/page.mdx
@@ -5,7 +5,7 @@ import { Scale } from "@/components/scale";
 
 Use `color` prop to control the text color of an element.
 
-<Scale hidePixels hidePreview values="color" />
+<Scale themeKey="colors" values="color" />
 
 ## Documentation
 
