--- a/apps/docs/app/(docs)/styling/transition-property/page.mdx
+++ b/apps/docs/app/(docs)/styling/transition-property/page.mdx
@@ -5,7 +5,7 @@ import { Scale } from "@/components/scale";
 
 Use `transition` prop to control the transition-property of an element.
 
-<Scale hidePixels hidePreview values="transition" />
+<Scale values="transition" />
 
 ## Documentation
 
