--- a/apps/docs/app/(docs)/styling/width/page.mdx
+++ b/apps/docs/app/(docs)/styling/width/page.mdx
@@ -5,7 +5,7 @@ import { Demo, demos } from "@/components/demo";
 
 Use `w` prop to control the width of an element.
 
-<Scale values="w" />
+<Scale themeKey="size" values="w" />
 
 ## Documentation
 
