--- a/apps/docs/app/(docs)/styling/z-index/page.mdx
+++ b/apps/docs/app/(docs)/styling/z-index/page.mdx
@@ -5,7 +5,7 @@ import { Demo, demos } from "@/components/demo";
 
 Use `z` prop to control the z-index of an element.
 
-<Scale hidePixels hidePreview values="z" />
+<Scale themeKey="zIndex" values="z" />
 
 ## Documentation
 
