--- a/apps/docs/app/(docs)/styling/height/page.mdx
+++ b/apps/docs/app/(docs)/styling/height/page.mdx
@@ -5,7 +5,7 @@ import { Demo, demos } from "@/components/demo";
 
 Use `h` prop to control the height of an element.
 
-<Scale values="h" />
+<Scale themeKey="size" values="h" />
 
 ## Documentation
 
