add ellipsis menu button

--- a/apps/docs/app/(docs)/components/dropdown-menu/page.mdx
+++ b/apps/docs/app/(docs)/components/dropdown-menu/page.mdx
@@ -34,6 +34,18 @@ By default we use the `Button` component for the menu trigger which accepts all 
 
 <Demo component={demos["dropdown-menu/trigger-usage"]} meta="{15-17}" />
 
+#### Ellipsis trigger
+
+We can also use `asChild` to render a completely different component. We provide two built-in buttons:
+
+- `AngleMenuButton` (default)
+- `EllipsisMenuButton`
+
+<Demo
+  component={demos["dropdown-menu/ellipsis-trigger-usage"]}
+  meta="{15-17}"
+/>
+
 ### Content
 
 #### Menu position
