clarify who should/can use which icon set

--- a/apps/docs/app/(docs)/guides/icons/page.mdx
+++ b/apps/docs/app/(docs)/guides/icons/page.mdx
@@ -6,9 +6,9 @@ We use a licensed **Font Awesome** icon kit with our Optimizely Design System.
 
 <Alert intent="warning" mt="16">
   <Heading level="6">Font Awesome Pro License</Heading>
+<p>**Optimizely staff** should always use icons from our **Font Awesome** icon kit.</p>
 
-<p>{`For demonstration purposes our documentation uses a publicly available icon library - but for our products we should always use icons from our Font Awesome icon kit.`}</p>
-
+<p>**Third party developers** can use any available icon library to build extensions.</p>
 </Alert>
 
 ## Installation
